<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/add_widget"
        app:showAsAction="ifRoom"
        android:id="@+id/add_to_widget"/>
</menu>